--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,10 @@
-html, body { width: 100%; height: 100%; -webkit-box-sizing: border-box; box-sizing: border-box; }
+html, body { width: 100%; height: 100%; -webkit-box-sizing: border-box; box-sizing: border-box; font-family: 'Roboto', sans-serif; }
 
 .title { text-align: center; font-size: 4em; color: #404040; }
 
 .result-div { display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-pack: center; -ms-flex-pack: center; justify-content: center; }
 
-.result-div span { font-size: 2em; }
+.result-div span { font-size: 3em; }
 
 .wrapper { min-height: 50px; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-align: center; -ms-flex-align: center; align-items: center; -webkit-box-pack: center; -ms-flex-pack: center; justify-content: center; -ms-flex-wrap: wrap; flex-wrap: wrap; margin: 10px auto; }
 
@@ -15,4 +15,10 @@ html, body { width: 100%; height: 100%; -webkit-box-sizing: border-box; box-sizi
 .controls button { margin: 0 5px; }
 
 .on { background-color: green; }
+
+.btn { border-radius: 15px; border: 2px solid black; width: 130px; height: 50px; font-size: 1.3rem; background-color: #5581ea; }
+
+.btn:hover { opacity: .8; }
+
+.reset { background-color: red; color: white; }
 /*# sourceMappingURL=style.css.map */
