--- a/scss/style.scss
+++ b/scss/style.scss
@@ -2,6 +2,7 @@ html, body {
     width: 100%;
     height: 100%;
     box-sizing: border-box;
+    font-family: 'Roboto', sans-serif;
 }
 
 
@@ -16,7 +17,7 @@ html, body {
     justify-content: center;
 
     span {
-        font-size: 2em;
+        font-size: 3em;
     }
 }
 
@@ -51,4 +52,22 @@ html, body {
 
 .on {
     background-color: green;
+}
+
+.btn {
+    border-radius: 15px;
+    border: 2px solid black;
+    width: 130px;
+    height: 50px;
+    font-size: 1.3rem;
+    background-color: #5581ea;
+
+    &:hover {
+        opacity: .8;
+    }
+}
+
+.reset {
+    background-color: red;
+    color: white; 
 }
